<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.nbaplayerswiki.ui.playerDetails.MorePlayerDetailsViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.playerDetails.MorePlayerDetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp">
            <TextView
                android:id="@+id/season_year_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/season_year_title" />
            <TextView
                android:id="@+id/season_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                app:season="@{viewModel.morePlayerDetails[0].season}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp">
            <TextView
                android:id="@+id/games_played_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/games_played_title" />
            <TextView
                android:id="@+id/games_played"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"
                app:gamesPlayed="@{viewModel.morePlayerDetails[0].gamesPlayed}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp">
            <TextView
                android:id="@+id/points_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/points_title" />

            <TextView
                android:id="@+id/points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                app:pts="@{viewModel.morePlayerDetails[0].pts}"/>
        </LinearLayout>
    </LinearLayout>
</layout>